Fixed white space above header on mobile and tablet

--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -1,35 +1,48 @@
-.logo
-  +size(90px)
-  background: url(../img/GOC1.png) center center
-  background-size: 88px 47px
-  background-repeat: no-repeat
-  text-indent: 100px
-  position: fixed
-  left: 30px
-  top: 10px
-  z-index: 999
++MQ(L)
+  .logo
+    +size(90px)
+    background: url(../img/GOC1.png) center center
+    background-size: 88px 47px
+    background-repeat: no-repeat
+    text-indent: 100px
+    position: fixed
+    left: 30px
+    top: 10px
+    z-index: 999
 
-a.back-to-top
-  display: none
-  width: 40px
-  height: 40px
-  text-indent: -9999px
-  position: fixed
-  z-index: 998
-  right: 20px
-  bottom: 20px
-  background: url(../img/silhouette125.svg) no-repeat center
-  background-size: 15px
-  background-color: $color-1
-  -webkit-border-radius: 30px
-  -moz-border-radius: 30px
-  border-radius: 30px
+  a.back-to-top
+    display: none
+    width: 40px
+    height: 40px
+    text-indent: -9999px
+    position: fixed
+    z-index: 998
+    right: 20px
+    bottom: 20px
+    background: url(../img/silhouette125.svg) no-repeat center
+    background-size: 15px
+    background-color: $color-1
+    -webkit-border-radius: 30px
+    -moz-border-radius: 30px
+    border-radius: 30px
 
 
++MQ(S)
+  .arrow
+    display: none
+  .logo
+    +size(90px)
+    background: url(../img/GOC1.png) center center
+    width: 88px
+    height: 47px
+    background-size: 88px 47px
+    background-repeat: no-repeat
+    float: left
+    margin:30px 0 0 30px
 
-  -webkit-border-radius: 30px
-  -moz-border-radius: 30px
-  border-radius: 30px
+
+  a.back-to-top
+    display:none
 
 
 
